# pinacotheca

./: .gallery-filter.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  gallery.html  index.html  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
_app/: version.json
docs/: atlas-reference.md  clutter-spawner.md  code-review-3d-improvements.md  extracting-3d-buildings.md  extracting-3d-resources.md  extracting-game-assets-from-unity-with-python.md  feature-request-per-ankh-map-atlas.md  improvement-naming-alignment.md  material-rendering.md  mod-extraction.md  per-ankh-missing-improvements.md  runtime-composed-cities.md  rural-improvement-composites.md  typetree-migration.md  typetree-spike-findings.md  urban-improvement-composites.md
scripts/: bump-version.py  dump_prefab.py  inspect_animal_mesh.py  inspect_barracks.py  inspect_splat_y.py  list_2d_assets.py  preview_exclusions.py  verify_skinned_mesh.py
scripts/probes/: composite_pvt.py  dump_greece_components.py  enumerate_meshes.py  extract_pvt_textures.py  find_textures.py  inspect_prefab.py  inspect_pvt_splats.py  meshes.json  parse_pvt_splat_binary.py  parse_urban_pvt.py  render_buildings.py  render_clutter_mesh.py  scan_clutter_meshes.py  texture_inventory.py
sprites/rivers/: RIVER_3D_CURVE_4.json  RIVER_3D_END_COAST.json  RIVER_3D_END_LAKE.json  RIVER_3D_START_LAKE.json  RIVER_3D_START_LAND.json
sprites/terrains/: TERRAIN_3D_ARID_HILL.json  TERRAIN_3D_LUSH_FLAT.json  TERRAIN_3D_LUSH_HILL.json  TERRAIN_3D_LUSH_MOUNTAIN.json  TERRAIN_3D_LUSH_VOLCANO.json  TERRAIN_3D_MARSH_FLAT.json  TERRAIN_3D_MARSH_HILL.json  TERRAIN_3D_MARSH_MOUNTAIN.json  TERRAIN_3D_MARSH_VOLCANO.json  TERRAIN_3D_SAND_FLAT.json  TERRAIN_3D_SAND_HILL.json  TERRAIN_3D_SAND_MOUNTAIN.json  TERRAIN_3D_TEMPERATE_HILL.json  TERRAIN_3D_TEMPERATE_MOUNTAIN.json  TERRAIN_3D_TUNDRA_FLAT.json  TERRAIN_3D_TUNDRA_HILL.json  TERRAIN_3D_TUNDRA_MOUNTAIN.json  TERRAIN_3D_TUNDRA_VOLCANO.json  TERRAIN_3D_URBAN_FLAT.json  TERRAIN_3D_WATER_COAST.json  TERRAIN_3D_WATER_OCEAN.json
sprites/vegetation/: VEGETATION_3D_JUNGLE_03.json  VEGETATION_3D_JUNGLE_HILL.json  VEGETATION_3D_JUNGLE_HURRICANE_02.json  VEGETATION_3D_SCRUB.json  VEGETATION_3D_SCRUB_ARID_CHARRED_MINOR.json  VEGETATION_3D_SCRUB_CHARRED_MINOR.json  VEGETATION_3D_SCRUB_CUT.json  VEGETATION_3D_SCRUB_CUT_CHARRED.json  VEGETATION_3D_SCRUB_HILL.json  VEGETATION_3D_SCRUB_HILL_CHARRED_MINOR.json  VEGETATION_3D_TREES_ARID_CHARRED_MINOR_01.json  VEGETATION_3D_TREES_ARID_CHARRED_MINOR_02.json  VEGETATION_3D_TREES_ARID_HURRICANE.json  (+5 more)
tests/: test_asset_index.py  test_atlas.py  test_auto_luminance.py  test_biome_base.py  test_categories.py  test_clutter_culling.py  test_clutter_spawner.py  test_clutter_transforms.py  test_cpu_texture.py  test_deploy.py  test_extractor.py  test_gallery_filter.py  test_halton.py  test_layered_render.py  test_manifest_filter.py  test_prefab.py  test_pvt_splats.py  test_render_metadata.py  test_renderer.py  test_team_color.py  test_terrain_clutter_splat.py  test_terrain_index.py  test_typetree.py
web/: README.md  package-lock.json  package.json  svelte.config.js
(+249 files in other folders)
